[gd_scene load_steps=11 format=3 uid="uid://bm5t38lfaxw62"]

[ext_resource type="Texture2D" uid="uid://ump855yruull" path="res://Art/Sprites/Kenney/ui_packed.png" id="1_g1rmx"]
[ext_resource type="Script" uid="uid://csi0iu4ff83tu" path="res://Prefab/UI/Skills/skill_slot.gd" id="2_afy1p"]
[ext_resource type="Texture2D" uid="uid://bybaw5r0ow2oc" path="res://Art/Sprites/Kenney/1_bit_pack.png" id="3_b6ie2"]
[ext_resource type="Theme" uid="uid://c6vho6rwvu82i" path="res://Art/Font/my_theme.tres" id="4_rehrh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r5dnw"]
atlas = ExtResource("1_g1rmx")
region = Rect2(256, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bj3hp"]
bg_color = Color(0.39215687, 0.4627451, 0.52156866, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp4q7"]
atlas = ExtResource("3_b6ie2")
region = Rect2(96, 352, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afy1p"]
atlas = ExtResource("1_g1rmx")
region = Rect2(320, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnpfs"]
atlas = ExtResource("1_g1rmx")
region = Rect2(384, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2l0g"]
atlas = ExtResource("1_g1rmx")
region = Rect2(352, 0, 32, 16)

[node name="SkillSlot" type="TextureButton" groups=["Skill_slot"]]
custom_minimum_size = Vector2(60, 60)
offset_right = 60.0
offset_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_r5dnw")
stretch_mode = 0
script = ExtResource("2_afy1p")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.58000004)
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bj3hp")

[node name="SkillSprite" type="Sprite2D" parent="."]
position = Vector2(30, 30)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_cp4q7")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_right = 76.0
offset_bottom = 62.0
scale = Vector2(0.281, 0.281)
theme = ExtResource("4_rehrh")
theme_override_font_sizes/font_size = 48

[node name="ControlLevelUp" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="TextureButton" type="TextureButton" parent="ControlLevelUp"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_afy1p")
texture_pressed = SubResource("AtlasTexture_qnpfs")
texture_hover = SubResource("AtlasTexture_g2l0g")
stretch_mode = 0

[connection signal="pressed" from="ControlLevelUp/TextureButton" to="." method="_on_skill_level_up_button_pressed"]
